--- a/First creative project/Packages/manifest.json
+++ b/First creative project/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.mathematics": "1.2.6",
     "com.unity.purchasing": "4.7.0",
     "com.unity.services.mediation": "1.0.5",
+    "com.unity.terrain-tools": "4.0.5",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
